--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -17,87 +17,39 @@ body {
 
 @font-face {
   font-family: 'SF UI Text';
-  src: url("../fonts/SFUIText-HeavyItalic.eot");
-  src: local("SF UI Text Heavy Italic"), local("SFUIText-HeavyItalic"), url("../fonts/SFUIText-HeavyItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/SFUIText-HeavyItalic.woff") format("woff"), url("../fonts/SFUIText-HeavyItalic.ttf") format("truetype");
-  font-weight: 300;
-  font-style: italic; }
-
-@font-face {
-  font-family: 'SF UI Text';
-  src: url("../fonts/SFUIText-LightItalic.eot");
-  src: local("SF UI Text Light Italic"), local("SFUIText-LightItalic"), url("../fonts/SFUIText-LightItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/SFUIText-LightItalic.woff") format("woff"), url("../fonts/SFUIText-LightItalic.ttf") format("truetype");
-  font-weight: 300;
-  font-style: italic; }
-
-@font-face {
-  font-family: 'SF UI Text';
-  src: url("../fonts/SFUIText-MediumItalic.eot");
-  src: local("SF UI Text Medium Italic"), local("SFUIText-MediumItalic"), url("../fonts/SFUIText-MediumItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/SFUIText-MediumItalic.woff") format("woff"), url("../fonts/SFUIText-MediumItalic.ttf") format("truetype");
-  font-weight: 500;
-  font-style: italic; }
-
-@font-face {
-  font-family: 'SF UI Text';
-  src: url("../fonts/SFUIText-Semibold.eot");
-  src: local("SF UI Text Semibold"), local("SFUIText-Semibold"), url("../fonts/SFUIText-Semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/SFUIText-Semibold.woff") format("woff"), url("../fonts/SFUIText-Semibold.ttf") format("truetype");
+  src: local("SF UI Text Semibold"), local("SFUIText-Semibold"), url("../fonts/SFUIText-Semibold.woff") format("woff");
   font-weight: 600;
   font-style: normal; }
 
 @font-face {
   font-family: 'SF UI Text';
-  src: url("../fonts/SFUIText-Regular.eot");
-  src: local("SF UI Text Regular"), local("SFUIText-Regular"), url("../fonts/SFUIText-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/SFUIText-Regular.woff") format("woff"), url("../fonts/SFUIText-Regular.ttf") format("truetype");
+  src: local("SF UI Text Regular"), local("SFUIText-Regular"), url("../fonts/SFUIText-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
   font-family: 'SF UI Text';
-  src: url("../fonts/SFUIText-BoldItalic.eot");
-  src: local("SF UI Text Bold Italic"), local("SFUIText-BoldItalic"), url("../fonts/SFUIText-BoldItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/SFUIText-BoldItalic.woff") format("woff"), url("../fonts/SFUIText-BoldItalic.ttf") format("truetype");
-  font-weight: bold;
-  font-style: italic; }
-
-@font-face {
-  font-family: 'SF UI Text';
-  src: url("../fonts/SFUIText-Bold.eot");
-  src: local("SF UI Text Bold"), local("SFUIText-Bold"), url("../fonts/SFUIText-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/SFUIText-Bold.woff") format("woff"), url("../fonts/SFUIText-Bold.ttf") format("truetype");
+  src: local("SF UI Text Bold"), local("SFUIText-Bold"), url("../fonts/SFUIText-Bold.woff") format("woff");
   font-weight: bold;
   font-style: normal; }
 
 @font-face {
   font-family: 'SF UI Text';
-  src: url("../fonts/SFUIText-Light.eot");
-  src: local("SF UI Text Light"), local("SFUIText-Light"), url("../fonts/SFUIText-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/SFUIText-Light.woff") format("woff"), url("../fonts/SFUIText-Light.ttf") format("truetype");
+  src: local("SF UI Text Light"), local("SFUIText-Light"), url("../fonts/SFUIText-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal; }
 
 @font-face {
   font-family: 'SF UI Text';
-  src: url("../fonts/SFUIText-Heavy.eot");
-  src: local("SF UI Text Heavy"), local("SFUIText-Heavy"), url("../fonts/SFUIText-Heavy.eot?#iefix") format("embedded-opentype"), url("../fonts/SFUIText-Heavy.woff") format("woff"), url("../fonts/SFUIText-Heavy.ttf") format("truetype");
+  src: local("SF UI Text Heavy"), local("SFUIText-Heavy"), url("../fonts/SFUIText-Heavy.woff") format("woff");
   font-weight: 900;
   font-style: normal; }
 
 @font-face {
   font-family: 'SF UI Text';
-  src: url("../fonts/SFUIText-Medium.eot");
-  src: local("SF UI Text Medium"), local("SFUIText-Medium"), url("../fonts/SFUIText-Medium.eot?#iefix") format("embedded-opentype"), url("../fonts/SFUIText-Medium.woff") format("woff"), url("../fonts/SFUIText-Medium.ttf") format("truetype");
+  src: local("SF UI Text Medium"), local("SFUIText-Medium"), url("../fonts/SFUIText-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal; }
-
-@font-face {
-  font-family: 'SF UI Text';
-  src: url("../fonts/SFUIText-Italic.eot");
-  src: local("SF UI Text Italic"), local("SFUIText-Italic"), url("../fonts/SFUIText-Italic.eot?#iefix") format("embedded-opentype"), url("../fonts/SFUIText-Italic.woff") format("woff"), url("../fonts/SFUIText-Italic.ttf") format("truetype");
-  font-weight: normal;
-  font-style: italic; }
-
-@font-face {
-  font-family: 'SF UI Text';
-  src: url("../fonts/SFUIText-SemiboldItalic.eot");
-  src: local("SF UI Text Semibold Italic"), local("SFUIText-SemiboldItalic"), url("../fonts/SFUIText-SemiboldItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/SFUIText-SemiboldItalic.woff") format("woff"), url("../fonts/SFUIText-SemiboldItalic.ttf") format("truetype");
-  font-weight: 600;
-  font-style: italic; }
 
 .page-header__flex {
   display: -webkit-box;
@@ -607,3 +559,118 @@ body {
     flex-direction: column; }
   .scroll__box {
     margin-bottom: 35px; } }
+
+.page-footer {
+  color: white;
+  border-style: solid;
+  border-width: 10px 0px 0px;
+  -o-border-image: url("../img/footer-gold.png") 10 0 0 repeat;
+  border-image: url("../img/footer-gold.png") 10 0 0 repeat;
+  background: #323232; }
+  .page-footer b {
+    font-size: 16px;
+    text-transform: uppercase;
+    opacity: 0.8; }
+  .page-footer p {
+    margin-top: 0;
+    font-size: 11px; }
+  .page-footer a {
+    margin-right: 10px;
+    color: white;
+    text-decoration: none;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+    .page-footer a:hover {
+      color: #f2c318; }
+
+.container--width {
+  width: 70%; }
+
+.page-footer__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  margin-top: 35px; }
+
+.page-footer__left-column {
+  -ms-flex-preferred-size: 15%;
+  flex-basis: 15%; }
+
+.page-footer__right-column {
+  -ms-flex-preferred-size: 85%;
+  flex-basis: 85%; }
+
+.page-footer__facebook {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 30px;
+  background: url("../img/fb.png") no-repeat left; }
+
+.page-footer__linked {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 30px;
+  background: url("../img/link.png") no-repeat left; }
+
+.page-footer__twitter {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 30px;
+  background: url("../img/tw.png") no-repeat left; }
+
+.page-footer__google {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 30px;
+  background: url("../img/go.png") no-repeat left; }
+
+.page-footer__right-column--flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .page-footer__right-column--flex b {
+    font-size: 12px; }
+
+.page-footer__link {
+  height: 20px;
+  padding: 5px 20px;
+  color: #323232 !important;
+  font-weight: bold;
+  background: #f2c318;
+  border-radius: 20px;
+  text-transform: uppercase;
+  vertical-align: middle; }
+
+.page-footer__contact {
+  margin-right: 15px; }
+
+.page-footer__text {
+  padding-top: 10px; }
+
+.page-footer__copyright {
+  padding-top: 40px;
+  padding-bottom: 70px;
+  text-align: center; }
+  .page-footer__copyright p {
+    font-size: 14px; }
+
+@media screen and (max-width: 1200px) {
+  .container--width {
+    width: 95%; }
+  .page-footer b {
+    font-size: 16px; } }
+
+@media screen and (max-width: 768px) {
+  .page-footer__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-pack: distribute;
+    justify-content: space-around; }
+  .page-footer {
+    text-align: center; }
+  .page-footer__right-column {
+    margin-top: 15px; } }
