--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -134,7 +134,7 @@
     <div class="scroll__second"></div>
   </section>
   <footer class="page-footer">
-    <div class="container">
+    <div class="container  container--width">
       <div class="page-footer__flex">
         <div class="page-footer__left-column">
           <b>Risk worning</b>
@@ -146,21 +146,51 @@
       </div>
       <div class="page-footer__flex">
         <div class="page-footer__left-column">
-          <b></b>
+          <b>QUICK LINKS</b>
         </div>
-        <div class="page-footer__right-column"></div>
+        <div class="page-footer__right-column">
+          <a href="#">Licenses</a>
+          <a href="#">Account Types</a>
+          <a href="#">Funding & Withdrawal</a>
+          <a href="#">Product Specification </a>
+          <a href="#">Economic Calendar</a>
+          <a href="#">Legal Documents</a>
+          <a href="#">Partners</a>
+          <a href="#">Faq</a>
+        </div>
       </div>
       <div class="page-footer__flex">
         <div class="page-footer__left-column">
-          <b></b>
+          <b>SOCIAL MEDIA</b>
         </div>
-        <div class="page-footer__right-column"></div>
+        <div class="page-footer__right-column">
+          <a href="#" class="page-footer__facebook">Facebook</a>
+          <a href="#" class="page-footer__linked">LinkedIn</a>
+          <a href="#" class="page-footer__twitter">Twitter</a>
+          <a href="#" class="page-footer__google">Google+</a>
+        </div>
       </div>
       <div class="page-footer__flex">
         <div class="page-footer__left-column">
-          <b></b>
+          <b>contact info</b>
         </div>
-        <div class="page-footer__right-column"></div>
+        <div class="page-footer__right-column  page-footer__right-column--flex">
+          <a href="#" class="page-footer__link">Contact Us</a>
+          <div class="page-footer__contact">
+            <b>Customer Service</b>
+            <p>CY Number: +35725000199</p>
+          </div>
+          <div class="page-footer__contact">
+            <b>Support</b>
+            <p>e-mail: support@forex24.com</p>
+          </div>
+          <p class="page-footer__text">UK Number: +442080891644</p>
+        </div>
+      </div>
+      <div class="page-footer__copyright">
+        <p>© 2017 All rights reserved LYDYA FINANCIAL LTD.<br>Located at 155 Ayias Fylaxeos, Ersi Court Suite 202, 3083 Limassol, Cyprus.</p>
+        <p>Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF Licence number 300/16 and Company registration number HE334292.</p>
+        <p>The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
       </div>
     </div>
   </footer>
