--- a/assets/templates/forex/sass/global/font.scss
+++ b/assets/templates/forex/sass/global/font.scss
@@ -1,119 +1,47 @@
-// @font-face {
-// 	font-family: 'SF UI Text';
-// 	src: url('../fonts/SFUIText-HeavyItalic.eot');
-// 	src: local('SF UI Text Heavy Italic'), local('SFUIText-HeavyItalic'),
-// 		url('../fonts/SFUIText-HeavyItalic.woff') format('woff'),
-// 		url('../fonts/SFUIText-HeavyItalic.ttf') format('truetype');
-// 	font-weight: 300;
-// 	font-style: italic;
-// }
-
-// @font-face {
-// 	font-family: 'SF UI Text';
-// 	src: url('../fonts/SFUIText-LightItalic.eot');
-// 	src: local('SF UI Text Light Italic'), local('SFUIText-LightItalic'),
-// 		url('../fonts/SFUIText-LightItalic.woff') format('woff'),
-// 		url('../fonts/SFUIText-LightItalic.ttf') format('truetype');
-// 	font-weight: 300;
-// 	font-style: italic;
-// }
-
-// @font-face {
-// 	font-family: 'SF UI Text';
-// 	src: url('../fonts/SFUIText-MediumItalic.eot');
-// 	src: local('SF UI Text Medium Italic'), local('SFUIText-MediumItalic'),
-// 		url('../fonts/SFUIText-MediumItalic.woff') format('woff'),
-// 		url('../fonts/SFUIText-MediumItalic.ttf') format('truetype');
-// 	font-weight: 500;
-// 	font-style: italic;
-// }
-
 @font-face {
 	font-family: 'SF UI Text';
-	// src: url('../fonts/SFUIText-Semibold.eot');
 	src: local('SF UI Text Semibold'), local('SFUIText-Semibold'),
-		url('../fonts/SFUIText-Semibold.woff') format('woff'),
-		url('../fonts/SFUIText-Semibold.ttf') format('truetype');
+		url('../fonts/SFUIText-Semibold.woff') format('woff');
 	font-weight: 600;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'SF UI Text';
-	// src: url('../fonts/SFUIText-Regular.eot');
 	src: local('SF UI Text Regular'), local('SFUIText-Regular'),
-		url('../fonts/SFUIText-Regular.woff') format('woff'),
-		url('../fonts/SFUIText-Regular.ttf') format('truetype');
+		url('../fonts/SFUIText-Regular.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
 }
-
-// @font-face {
-// 	font-family: 'SF UI Text';
-// 	src: url('../fonts/SFUIText-BoldItalic.eot');
-// 	src: local('SF UI Text Bold Italic'), local('SFUIText-BoldItalic'),
-// 		url('../fonts/SFUIText-BoldItalic.woff') format('woff'),
-// 		url('../fonts/SFUIText-BoldItalic.ttf') format('truetype');
-// 	font-weight: bold;
-// 	font-style: italic;
-// }
  
 @font-face {
 	font-family: 'SF UI Text';
-	// src: url('../fonts/SFUIText-Bold.eot');
 	src: local('SF UI Text Bold'), local('SFUIText-Bold'),
-		url('../fonts/SFUIText-Bold.woff') format('woff'),
-		url('../fonts/SFUIText-Bold.ttf') format('truetype');
+		url('../fonts/SFUIText-Bold.woff') format('woff');
 	font-weight: bold;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'SF UI Text';
-	// src: url('../fonts/SFUIText-Light.eot');
 	src: local('SF UI Text Light'), local('SFUIText-Light'),
-		url('../fonts/SFUIText-Light.woff') format('woff'),
-		url('../fonts/SFUIText-Light.ttf') format('truetype');
+		url('../fonts/SFUIText-Light.woff') format('woff');
 	font-weight: 300;
 	font-style: normal;
 }
  
 @font-face {
 	font-family: 'SF UI Text';
-	// src: url('../fonts/SFUIText-Heavy.eot');
 	src: local('SF UI Text Heavy'), local('SFUIText-Heavy'),
-		url('../fonts/SFUIText-Heavy.woff') format('woff'),
-		url('../fonts/SFUIText-Heavy.ttf') format('truetype');
+		url('../fonts/SFUIText-Heavy.woff') format('woff');
 	font-weight: 900;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'SF UI Text';
-	// src: url('../fonts/SFUIText-Medium.eot');
 	src: local('SF UI Text Medium'), local('SFUIText-Medium'),
-		url('../fonts/SFUIText-Medium.woff') format('woff'),
-		url('../fonts/SFUIText-Medium.ttf') format('truetype');
+		url('../fonts/SFUIText-Medium.woff') format('woff');
 	font-weight: 500;
 	font-style: normal;
 }
-
-// @font-face {
-// 	font-family: 'SF UI Text';
-// 	src: url('../fonts/SFUIText-Italic.eot');
-// 	src: local('SF UI Text Italic'), local('SFUIText-Italic'),
-// 		url('../fonts/SFUIText-Italic.woff') format('woff'),
-// 		url('../fonts/SFUIText-Italic.ttf') format('truetype');
-// 	font-weight: normal;
-// 	font-style: italic;
-// }
-
-// @font-face {
-// 	font-family: 'SF UI Text';
-// 	src: url('../fonts/SFUIText-SemiboldItalic.eot');
-// 	src: local('SF UI Text Semibold Italic'), local('SFUIText-SemiboldItalic'),
-// 		url('../fonts/SFUIText-SemiboldItalic.woff') format('woff'),
-// 		url('../fonts/SFUIText-SemiboldItalic.ttf') format('truetype');
-// 	font-weight: 600;
-// 	font-style: italic;
-// }
