--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -600,7 +600,9 @@ body {
 
 .page-footer__right-column {
   -ms-flex-preferred-size: 85%;
-  flex-basis: 85%; }
+  flex-basis: 85%;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
 
 .page-footer__facebook {
   padding-top: 5px;
@@ -629,7 +631,9 @@ body {
 .page-footer__right-column--flex {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
   .page-footer__right-column--flex b {
     font-size: 12px; }
 
@@ -644,7 +648,9 @@ body {
   vertical-align: middle; }
 
 .page-footer__contact {
-  margin-right: 15px; }
+  margin-right: 15px;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
 
 .page-footer__text {
   padding-top: 10px; }
