--- a/assets/templates/forex/sass/blocks/page-footer.scss
+++ b/assets/templates/forex/sass/blocks/page-footer.scss
@@ -44,6 +44,7 @@
 
 .page-footer__right-column {
   flex-basis: 85%;
+  flex-wrap: wrap;
 }
 
 .page-footer__facebook {
@@ -76,6 +77,7 @@
 
 .page-footer__right-column--flex {
   display: flex;
+  flex-wrap: wrap;
   
   & b {
     font-size: 12px;
@@ -95,6 +97,7 @@
 
 .page-footer__contact {
   margin-right: 15px;
+  flex-wrap: wrap;
 }
 
 .page-footer__text {
