--- a/assets/templates/forex/sass/blocks/global.scss
+++ b/assets/templates/forex/sass/blocks/global.scss
@@ -76,7 +76,7 @@
   .global__list {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    // align-items: center;
     padding-bottom: 30px;
     text-align: left;
   }
