--- a/assets/templates/forex/sass/blocks/scroll.scss
+++ b/assets/templates/forex/sass/blocks/scroll.scss
@@ -1,13 +1,13 @@
 .scroll__first {
   min-height: 470px;
-  background: url("../img/scroll-1n.png") no-repeat top;
+  background: url("../img/scroll-f.jpg") no-repeat top;
   background-size: cover;
   background-attachment: fixed;
 }
 
 .scroll__second {
   min-height: 470px;
-  background: url("../img/scroll-2n.png") no-repeat top;
+  background: url("../img/scroll-s.jpg") no-repeat top;
   background-size: cover;
   background-attachment: fixed;
 }
