--- a/assets/templates/forex/sass/blocks/slider.scss
+++ b/assets/templates/forex/sass/blocks/slider.scss
@@ -103,6 +103,11 @@
     bottom: -25px;
   }
   
+  .slick-dots li button:before {
+    width: 10px;
+    height: 10px;
+  }
+  
   .slick-dots li button::before {
     border: 1px solid gray;
     opacity: 0.3;
