--- a/assets/templates/forex/sass/blocks/page-footer.scss
+++ b/assets/templates/forex/sass/blocks/page-footer.scss
@@ -29,7 +29,7 @@
 }
 
 .container--width {
-  width: 70%;
+  width: 80%;
 }
 
 .page-footer__flex {
@@ -39,11 +39,11 @@
 }
 
 .page-footer__left-column {
-  flex-basis: 15%;
+  // width: 450px;
 }
 
 .page-footer__right-column {
-  flex-basis: 85%;
+  width: 1150px;
   flex-wrap: wrap;
 }
 
@@ -78,7 +78,7 @@
 .page-footer__right-column--flex {
   display: flex;
   flex-wrap: wrap;
-  
+
   & b {
     font-size: 12px;
   }
@@ -136,10 +136,38 @@
   
   .page-footer {
     text-align: center;
+    
+    & a {
+      margin-right: 0;
+    }
   }
   
   .page-footer__right-column {
     margin-top: 15px;
+  }
+  
+  .page-footer__right-column {
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    width: auto;
+  }
+  
+  .page-footer__contact {
+    margin: 10px 0;
+  }
+  
+  .page-footer__right-column--link {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    margin: auto;
+    padding-top: 15px;
+    text-align: left;
+    
+    & a {
+      margin-bottom: 10px;
+    }
   }
 }
 
