Добавил блок с ссылками

--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -52,15 +52,21 @@
       </div>
       <div class="page-header__offer">
         <div class="page-header__item">
-          <b></b>
-          <a href="#"></a>
+          <b>NEW TO MINING?</b>
+          <a href="#">GET STARTED ›</a>
         </div>
-        <div class="page-header__item"></div>
-        <div class="page-header__item"></div>
+        <div class="page-header__item">
+          <b>MINING TECHNOLOGY</b>
+          <a href="#">LEARN MORE ›</a>
+        </div>
+        <div class="page-header__item">
+          <b>CLOUD MINING</b>
+          <a href="#">LEARN MORE ›</a>
+        </div>
       </div>
       <div class="page-header__about">
         <div class="page-header__left">
-          <b></b>
+          <b>How Bitcoin Mining Works</b>
           <p></p>
           <p></p>
         </div>
