--- a/assets/templates/miner/css/style.css
+++ b/assets/templates/miner/css/style.css
@@ -119,3 +119,32 @@ body {
 .page-header__dot {
   font-size: 25px;
   font-style: italic; }
+
+.page-header__offer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-top: 100px; }
+
+.page-header__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  height: 76px;
+  padding-top: 10px;
+  padding-left: 100px;
+  background: url("../img/header-offer.png") no-repeat left; }
+  .page-header__item b {
+    color: #fff;
+    font-size: 25px; }
+  .page-header__item a {
+    color: #ffe592;
+    font-size: 20px;
+    text-decoration: none; }
