--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -67,17 +67,17 @@
       <div class="page-header__about">
         <div class="page-header__left">
           <b>How Bitcoin Mining Works</b>
-          <p></p>
-          <p></p>
+          <p>Where do bitcoins come from? With paper money, a government<br>decides when to print and distribute money. Bitcoin doesn't have<br>a central government.</p>
+          <p>With Bitcoin, miners use special software to solve math problems<br>and are issued a certain number of bitcoins in exchange. This<br>provides a smart way to issue the currency and also creates an<br>incentive for more people to mine.</p>
         </div>
         <div class="page-header__right">
-          <b></b>
-          <p></p>
-          <b></b>
+          <b>Bitcoin is Secure</b>
+          <p>Bitcoin miners help keep the Bitcoin network secure by approving transactions.<br>Mining is an important and integral part of Bitcoin that ensures fairness while<br>keeping the Bitcoin network stable, safe and secure.</p>
+          <b>Links</b>
           <ul>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
+            <li><a href="#">We Use Coins</a> - Learn all about crypto-currency.</li>
+            <li><a href="#">Bitcoin News</a> - Where the Bitcoin community gets news.</li>
+            <li><a href="#">Bitcoin Knowledge Podcast</a> - Interviews with top people in Bitcoin.</li>
           </ul>
         </div>
       </div>
