--- a/assets/templates/crypto/template/contact.html
+++ b/assets/templates/crypto/template/contact.html
@@ -66,6 +66,7 @@
           </ul>
         </div>
       </div>
+      <p class="page-footer__copyright">© Copyright 2017 Cryptologi, All right reserved. Cryptologi is a property of GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, CONNECTEDSKY HOUSE, 2027 Nicosia, Cyprus. Operational address: Igoumenitsas 12, CONNECTEDSKY HOUSE, 2027 Nicosia, Cyprus</p>
     </div>
   </footer>
 </body>
