--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -83,5 +83,68 @@
       </div>
     </div>
   </header>
+  <section class="hardware">
+    <div class="container">
+      <div class="hardware__video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/GmOzih6I1zs?rel=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/YIVAluSL9SU?rel=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+      </div>
+      <h2>Bitcoin Mining Hardware Comparison</h2>
+      <p class="hardware__sub-title">Currently, based on (1) price per hash and (2) electrical efficiency the best Bitcoin miner options are:</p>
+      <div class="hardware__list">
+        <div class="hardware__item">
+          <p class="hardware__title">AntMiner S7</p>
+          <img src="img/hardware-f.png" alt="AntMiner S7">
+          <p class="hardware__charter">ADVERTISED CAPACITY</p>
+          <p class="hardware__value">4.73 Th/s</p>
+          <p class="hardware__charter">POWER AFFICIENCY</p>
+          <p>0.25 W/Gh</p>
+          <p class="hardware__charter">WEIGHT</p>
+          <p>8.8 POUNDS</p>
+          <p class="hardware__charter">GUIDE</p>
+          <p>YES</p>
+          <p class="hardware__charter">PRICE</p>
+          <p>$479.95</p>
+          <a href="#"></a>
+          <p>Appx. BTC earned per month</p>
+          <p>0.1645</p>
+        </div>
+        <div class="hardware__item">
+          <p class="hardware__title">AntMiner S9</p>
+          <img src="" alt="">
+          <p class="hardware__charter">ADVERTISED CAPACITY</p>
+          <p>4.73 Th/s</p>
+          <p class="hardware__charter">POWER AFFICIENCY</p>
+          <p>0.25 W/Gh</p>
+          <p class="hardware__charter">WEIGHT</p>
+          <p>8.8 POUNDS</p>
+          <p class="hardware__charter">GUIDE</p>
+          <p>YES</p>
+          <p class="hardware__charter">PRICE</p>
+          <p>$479.95</p>
+          <a href="#"></a>
+          <p>Appx. BTC earned per month</p>
+          <p>0.1645</p>
+        </div>
+        <div class="hardware__item">
+          <p class="hardware__title">Avalon6</p>
+          <img src="" alt="">
+          <p class="hardware__charter">ADVERTISED CAPACITY</p>
+          <p>4.73 Th/s</p>
+          <p class="hardware__charter">POWER AFFICIENCY</p>
+          <p>0.25 W/Gh</p>
+          <p class="hardware__charter">WEIGHT</p>
+          <p>8.8 POUNDS</p>
+          <p class="hardware__charter">GUIDE</p>
+          <p>YES</p>
+          <p class="hardware__charter">PRICE</p>
+          <p>$479.95</p>
+          <a href="#"></a>
+          <p>Appx. BTC earned per month</p>
+          <p>0.1645</p>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
