--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -200,6 +200,7 @@
           </select>
         </div> -->
       </div>
+      <p class="page-footer__copyright">© Copyright 2017 Cryptologi, All right reserved. Cryptologi is a property of GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, CONNECTEDSKY HOUSE, 2027 Nicosia, Cyprus. Operational address: Igoumenitsas 12, CONNECTEDSKY HOUSE, 2027 Nicosia, Cyprus</p>
     </div>
   </footer>
   <script src="js/script.js"></script>
