Закончил список товаров

--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -98,50 +98,50 @@
           <p class="hardware__charter">ADVERTISED CAPACITY</p>
           <p class="hardware__value">4.73 Th/s</p>
           <p class="hardware__charter">POWER AFFICIENCY</p>
-          <p>0.25 W/Gh</p>
+          <p class="hardware__value">0.25 W/Gh</p>
           <p class="hardware__charter">WEIGHT</p>
-          <p>8.8 POUNDS</p>
+          <p class="hardware__value">8.8 POUNDS</p>
           <p class="hardware__charter">GUIDE</p>
-          <p>YES</p>
+          <p class="hardware__value  hardware__value--yes">YES</p>
           <p class="hardware__charter">PRICE</p>
-          <p>$479.95</p>
+          <p class="hardware__value">$479.95</p>
           <a href="#"></a>
-          <p>Appx. BTC earned per month</p>
-          <p>0.1645</p>
+          <p class="hardware__charter">Appx. BTC earned per month</p>
+          <p class="hardware__value">0.1645</p>
         </div>
         <div class="hardware__item">
           <p class="hardware__title">AntMiner S9</p>
-          <img src="" alt="">
+          <img src="img/hardware-s.png" alt="AntMiner S9">
           <p class="hardware__charter">ADVERTISED CAPACITY</p>
-          <p>4.73 Th/s</p>
+          <p class="hardware__value">4.73 Th/s</p>
           <p class="hardware__charter">POWER AFFICIENCY</p>
-          <p>0.25 W/Gh</p>
+          <p class="hardware__value">0.25 W/Gh</p>
           <p class="hardware__charter">WEIGHT</p>
-          <p>8.8 POUNDS</p>
+          <p class="hardware__value">8.8 POUNDS</p>
           <p class="hardware__charter">GUIDE</p>
-          <p>YES</p>
+          <p class="hardware__value  hardware__value--yes">YES</p>
           <p class="hardware__charter">PRICE</p>
-          <p>$479.95</p>
+          <p class="hardware__value">$479.95</p>
           <a href="#"></a>
-          <p>Appx. BTC earned per month</p>
-          <p>0.1645</p>
+          <p class="hardware__charter">Appx. BTC earned per month</p>
+          <p class="hardware__value">0.1645</p>
         </div>
         <div class="hardware__item">
           <p class="hardware__title">Avalon6</p>
-          <img src="" alt="">
+          <img src="img/hardware-t.png" alt="Avalon6">
           <p class="hardware__charter">ADVERTISED CAPACITY</p>
-          <p>4.73 Th/s</p>
+          <p class="hardware__value">4.73 Th/s</p>
           <p class="hardware__charter">POWER AFFICIENCY</p>
-          <p>0.25 W/Gh</p>
+          <p class="hardware__value">0.25 W/Gh</p>
           <p class="hardware__charter">WEIGHT</p>
-          <p>8.8 POUNDS</p>
+          <p class="hardware__value">8.8 POUNDS</p>
           <p class="hardware__charter">GUIDE</p>
-          <p>YES</p>
+          <p class="hardware__value">NO</p>
           <p class="hardware__charter">PRICE</p>
-          <p>$479.95</p>
+          <p class="hardware__value">$479.95</p>
           <a href="#"></a>
-          <p>Appx. BTC earned per month</p>
-          <p>0.1645</p>
+          <p class="hardware__charter">Appx. BTC earned per month</p>
+          <p class="hardware__value">0.1645</p>
         </div>
       </div>
     </div>
