--- a/assets/templates/miner/css/style.css
+++ b/assets/templates/miner/css/style.css
@@ -197,10 +197,20 @@ body {
   display: flex;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  justify-content: space-between; }
+  justify-content: space-between;
+  margin-top: 50px; }
 
 .hardware__item {
   text-align: center; }
+  .hardware__item p {
+    margin-top: 0;
+    margin-bottom: 10px; }
+  .hardware__item a {
+    display: block;
+    margin: auto;
+    width: 160px;
+    height: 26px;
+    background: url("../img/hardware-amazon.png"); }
 
 .hardware__title {
   font-size: 25px;
@@ -208,4 +218,15 @@ body {
   text-transform: uppercase; }
 
 .hardware__charter {
+  padding-top: 20px;
+  font-size: 18px;
   font-weight: bold; }
+
+.hardware__value {
+  color: #480000;
+  font-size: 25px;
+  font-weight: bold; }
+
+.hardware__value--yes {
+  color: #4183c4;
+  text-decoration: underline; }
