--- a/assets/templates/crypto/template/about.html
+++ b/assets/templates/crypto/template/about.html
@@ -34,9 +34,16 @@
     <div class="container">
       <div class="container__adv  container__adv--pm">
         <h1>About Us</h1>
-        <p>
-          Cryptologi is a multi-functional digital currency exchange that is highly trust worthy. It offers a cross-platform trading via website, mobile application, web socket and API providing accesss to high liquidity orderbook for top currency pairs on the market. Very fast Bitcoin buying and selling is possible through simplified bundle interface. The exchange has developed a multi-level account system with individual approach to each customer, from Bitcoin learner to institutional professional traders.<br><br>With Cryptologi you get worldwide coverage, mulitiple payement options, and 24/7 support accompanied by time-proven platform stability that guarantees safty of assets and data. We provide all individuals and businesses a  world class experience to trade Bitcoin and other crypto currencies. Cryptologi is absolutely the go-to site for traders and investors when you demand a quick trade transaction, stable wallets and advanced security practices. Cryptologi is the right place to be!
-        </p>
+        <p class="page-main__about--title">Cryptologi cryptocurrency exchange puts you first</p>
+        <p>Founded in 2017, Cypriot -based cryptologi is a leading Bitcoin exchange in euro volume and liquidity and offering trading other cryptocurrency tokens. cryptologi is consistently rated in the same line with the best and most secure Bitcoin exchange and develop high end technologies solutions for the crypto market.</p>
+        <p>We are partner with the the most trusted liquidity providers and trusted by hundreds of thousands of traders around the world.</p>
+        <p class="page-main__about--title">Our values</p>
+        <p class="page-main__about--title">Transperancy</p>
+        <p>We believe transparency is a crucial demand as we are committed for the prices and transactions and for the processing of orders in our platforms.</p>
+        <p class="page-main__about--title">Professionalism</p>
+        <p>We are dedicated to our product and your experience.</p>
+        <p class="page-main__about--title">Guarantee</p>
+        <p class="page-main--pb">Your funds and tokens are guarantee with segregated account, separate from client funds and audited by respected accountants and nominee.</p>
       </div>
     </div>
   </main>
