--- a/assets/templates/crypto/template/contact.html
+++ b/assets/templates/crypto/template/contact.html
@@ -33,8 +33,10 @@
   <main class="page-main  page-main--contact">
     <div class="container">
       <div class="container__adv  container__adv--pm">
-        <h1>Contact Us</h1>
-        <p>GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, CONNECTEDSKY HOUSE, 2027 Nicosia, Cyprus</p>
+        <h1>Contact</h1>
+        <p>Support email: support@cryptologi.com</p>
+        <p>Support phone: +357</p>
+        <p class="page-main--pb">Monday to Friday between 10:00 to 18:00 GMT</p>
       </div>
     </div>
   </main>
