--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -113,38 +113,93 @@
           <p class="hardware__title">AntMiner S9</p>
           <img src="img/hardware-s.png" alt="AntMiner S9">
           <p class="hardware__charter">ADVERTISED CAPACITY</p>
-          <p class="hardware__value">4.73 Th/s</p>
+          <p class="hardware__value">13.5 Th/s</p>
           <p class="hardware__charter">POWER AFFICIENCY</p>
-          <p class="hardware__value">0.25 W/Gh</p>
+          <p class="hardware__value">0.098 W/Gh</p>
           <p class="hardware__charter">WEIGHT</p>
-          <p class="hardware__value">8.8 POUNDS</p>
+          <p class="hardware__value">8.1 pounds</p>
           <p class="hardware__charter">GUIDE</p>
           <p class="hardware__value  hardware__value--yes">YES</p>
           <p class="hardware__charter">PRICE</p>
-          <p class="hardware__value">$479.95</p>
+          <p class="hardware__value">$1,987.95</p>
           <a href="#"></a>
           <p class="hardware__charter">Appx. BTC earned per month</p>
-          <p class="hardware__value">0.1645</p>
+          <p class="hardware__value">0.3603</p>
         </div>
         <div class="hardware__item">
           <p class="hardware__title">Avalon6</p>
           <img src="img/hardware-t.png" alt="Avalon6">
           <p class="hardware__charter">ADVERTISED CAPACITY</p>
-          <p class="hardware__value">4.73 Th/s</p>
+          <p class="hardware__value">3.5 Th/s</p>
           <p class="hardware__charter">POWER AFFICIENCY</p>
-          <p class="hardware__value">0.25 W/Gh</p>
+          <p class="hardware__value">0.29 W/Gh</p>
           <p class="hardware__charter">WEIGHT</p>
-          <p class="hardware__value">8.8 POUNDS</p>
+          <p class="hardware__value">9.5 pounds</p>
           <p class="hardware__charter">GUIDE</p>
           <p class="hardware__value">NO</p>
           <p class="hardware__charter">PRICE</p>
-          <p class="hardware__value">$479.95</p>
+          <p class="hardware__value">$499.95</p>
           <a href="#"></a>
           <p class="hardware__charter">Appx. BTC earned per month</p>
-          <p class="hardware__value">0.1645</p>
+          <p class="hardware__value">0.1232</p>
         </div>
       </div>
     </div>
+  </section>
+  <section class="tabs">
+    <div class="container">
+      <div class="tabs__flex">
+        <div class="tabs__left">
+          <p>Bitcoin mining is the process of adding transaction records to Bitcoin's public<br>ledger of past transactions or blockchain. This ledger of past transactions is<br>called the block chain as it is a chain of blocks. The block chain serves to confirm<br>transactions to the rest of the network as having taken place.</p>
+          <p>Bitcoin nodes use the block chain to distinguish legitimate Bitcoin transactions<br>from attempts to re-spend coins that have already been spent elsewhere.</p>
+        </div>
+        <div class="tabs__right">
+          <!-- <ul>
+            <li>Overview - Table of Contents</li>
+            <li><a href="#">Mining Hardware Comparison</a></li>
+            <li><a href="#">What is Bitcoin Mining?</a></li>
+            <li><a href="#">What is the Blockchain?</a></li>
+            <li><a href="#">What is the Proof of Work?</a></li>
+            <li><a href="#">What is Bitcoin Mining Difficulty?</a></li>
+            <li><a href="#">The Computationally-Difficult Problem</a></li>
+            <li><a href="#">The Bitcoin Network Difficulty Metric</a></li>
+            <li><a href="#">The Block Reward</a></li>
+          </ul> -->
+          <table>
+            <tr>
+              <th>Overview - Table of Contents</th>
+            </tr>
+            <tr>
+              <td><a href="#">What is Bitcoin Mining?</a></td>
+            </tr>
+            <tr>
+              <td><a href="#">What is the Blockchain?</a></td>
+            </tr>
+            <tr>
+              <td><a href="#">What is the Proof of Work?</a></td>
+            </tr>
+            <tr>
+              <td><a href="#">What is Bitcoin Mining Difficulty?</a></td>
+            </tr>
+            <tr>
+              <td><a href="#">The Computationally-Difficult Problem</a></td>
+            </tr>
+            <tr>
+              <td><a href="#">The Bitcoin Network Difficulty Metric</a></td>
+            </tr>
+            <tr>
+              <td><a href="#">The Block Reward</a></td>
+            </tr>
+            <tr>
+              <td><a href="#">Mining Hardware Comparison</a></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="mining">
+    
   </section>
 </body>
 </html>
