--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -198,8 +198,8 @@
       </div>
     </div>
   </section>
-  <section class="mining">
-    
-  </section>
+  <section class="mining"></section>
+  <section class="truck"></section>
+  <section class="edge"></section>
 </body>
 </html>
