--- a/assets/templates/miner/sass/blocks/mining.scss
+++ b/assets/templates/miner/sass/blocks/mining.scss
@@ -1,3 +1,5 @@
 .mining {
-  background: url('../img/mining.png');
+  min-height: 550px;
+  background: url('../img/mining-bg.png') no-repeat top;
+  background-size: cover;
 }
