--- a/assets/templates/miner/sass/style.scss
+++ b/assets/templates/miner/sass/style.scss
@@ -4,3 +4,6 @@
 @import 'blocks/page-header';
 @import 'blocks/hardware';
 @import 'blocks/tabs';
+@import 'blocks/mining';
+@import 'blocks/truck';
+@import 'blocks/edge';
