--- a/assets/templates/crypto/template/faq.html
+++ b/assets/templates/crypto/template/faq.html
@@ -34,22 +34,26 @@
     <div class="container">
       <div class="container__adv  container__adv--pm">
         <h1>Faq</h1>
-        <p class="page-main__title">How do I cancel an order?</p>
-        <p>To cancel an open order, first make sure you're viewing the market on which your order was placed (e.g. BTC-USD, LTC-BTC, etc). Your open orders will be listed in the Open Orders panel in the lower middle of the trading dashboard. Hover the order that you desire to cancel and click the "cancel" to the right hand side of the order.</p>
-        <p class="page-main__title">Do you allow VPN/Tor connections?</p>
-        <p>Yes we do, however for best performance of the Cryptologi web interface and API we recommend using a good and fast connection.</p>
-        <p class="page-main__title">Can I trade on margin?</p>
-        <p>Currently Margin trading is disabled. Please subscribe to our blog for more updates.</p>
-        <p class="page-main__title">What is a limit order?</p>
-        <p>Placing a limit order lets you decide what price you wish to buy or sell at. Your order will be added to the order book and will execute when someone submits a matching order.</p>
-        <p class="page-main__title">What is the order book?</p>
-        <p>The order book is a list of all open (unfilled) buy and sell orders. You can buy or sell digital currency at any price listed.</p>
-        <p class="page-main__title">Why is my order stuck as an open order?</p>
-        <p>Newly placed orders first enter the order book as an "open order". When some of your "open order" matches with another order, it becomes a "partially matched order". When all of your order matches with another user's order, it becomes a "fully matched order" or "completed order". Completed orders are removed from the order book.</p>
-        <p class="page-main__title">Is there a fee to transfer funds to and from Cryptologi?</p>
-        <p>Cryptologi does not charge any transfer fees for moving funds between your Coinbase account and Cryptologi account.</p>
-        <p class="page-main__title">Why is my "available" balance less than my total?</p>
-        <p class="page-main--pb">You have open orders. The funds used to place your orders are considered to be on hold and not part of your available balance.</p>
+        <p class="page-main__title">Account FAQ</p>
+        <p class="page-main__title">How to open a Cryptologi trade account?</p>
+        <p>It is easy and secure to open a Cryptologi account. Initially, you can choose to open a practice, free demo account. However, if you’re ready to trade, you can make a deposit and open a Live Account. Based on how you would like to fund your account, there are three types of account available, but once you begin trading, there is the option to move from one account type to another.</p>
+        <p>You will need to fill out a short registration form for any Live Account that you want to open. Legal documentation is required by regulation in order to provide proof of your identity. As soon as your identity has been confirmed, all you need to do is download the platform you want to trade on, make a deposit to fund your account, and then you’re ready to start trading.</p>
+        <p class="page-main__title">Which types of accounts are available?</p>
+        <p>Three kinds of accounts are offered by Cryptologi:</p>
+        <p><b>Mini Account</b> – beginning at $500 USD</p>
+        <p><b>Classic Account</b> – beginning at $5000 USD</p>
+        <p><b>Premium Account</b> beginning at $20,000 USD</p>
+        <p class="page-main__title">Which platform should you use?</p>
+        <p>There are a variety of different platforms available from Cryptologi to meet the requirements of different traders with different circumstances.</p>
+        <p><b>Criptologi Webtrader</b> - download this popular, world-renowned desktop platform if you predominately trade in crypto currencies. It is both user-friendly and state-of-the-art.</p>
+        <p><b>Criptologi Mobile</b> - this solution provides apps for Android, tablets, and iPhone, enabling traders to trade form anywhere in the world, from a variety of devices.</p>
+        <p class="page-main__title">What type of information do you need to give in order to trade?</p>
+        <p>You are requested to give the following information for proof of identity upon registration:</p>
+        <p>A certified, original copy of your passport or ID.</p>
+        <p>A utility bill with proof of your mailing address.</p>
+        <p>You will need to clearly indicate the beneficiary name on the Cryptologi Customer Agreement. It is important that the account beneficiary name corresponds to the name on the customer agreement form, and also the documents for proof of identity. In addition, if you wish to withdraw funds, it must be to the same beneficiary.</p>
+        <p class="page-main__title">How do you manage your risk?</p>
+        <p class="page-main--pb">The stop loss order and the limit order are the most common risk management tools in Forex trading. A limit order stets a restriction on the minimum price to be received or the maximum price to be paid. An automatic liquidation at a predetermined price for a particular position is called a stop loss. This is used to limit potential losses if the market moves against an investor’s position.</p>
       </div>
     </div>
   </main>
