--- a/assets/templates/miner/css/style.css
+++ b/assets/templates/miner/css/style.css
@@ -285,33 +285,24 @@ body {
   margin-top: -150px;
   background: url("../img/cloud-bg.png"); }
 
-.cloud::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 300px;
-  height: 300px;
-  background: url("../img/cloud-human.png"); }
-
 .cloud__flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
-  padding-top: 200px; }
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  padding-top: 200px;
+  padding-bottom: 100px; }
 
 .cloud__left {
-  width: 400px;
-  margin-right: 50px;
+  width: 500px;
   font-size: 18px;
-  opacity: 0.8; }
+  color: rgba(0, 0, 0, 0.8); }
 
 .cloud__middle {
-  width: 400px;
-  font-size: 18px; }
+  width: 500px;
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.8); }
 
 .cloud__title {
   margin-top: 20px;
@@ -321,3 +312,32 @@ body {
   font-weight: bold;
   background: #000;
   text-transform: uppercase; }
+
+.why {
+  background: url("../img/why-bg.png"); }
+  .why b {
+    font-size: 25px;
+    text-transform: uppercase; }
+  .why ul {
+    padding-left: 20px;
+    font-size: 18px;
+    font-weight: bold;
+    opacity: 0.8; }
+
+.why__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-top: 70px;
+  padding-bottom: 100px; }
+
+.why__left {
+  padding-left: 100px;
+  background: url("../img/check-green.png") no-repeat left top; }
+
+.why__right {
+  padding-left: 100px;
+  background: url("../img/check-red.png") no-repeat left top; }
