--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -218,5 +218,54 @@
       </div>
     </div>
   </section>
+  <section class="why">
+    <div class="container">
+      <div class="why__flex">
+        <div class="why__left">
+          <b>What are Bitcoin<br>CLOUDMining advantages?</b>
+          <ul>
+            <li>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain</li>
+            <li>Bitcoin mining is the process of adding</li>
+            <li>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain</li>
+            <li>Bitcoin mining is the process of adding</li>
+            <li>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain</li>
+            <li>Bitcoin mining is the process of adding</li>
+            <li>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain</li>
+            <li>Bitcoin mining is the process of adding</li>
+          </ul>
+        </div>
+        <div class="why__right">
+          <b>What are Bitcoin<br>CLOUDMining disadvantages?</b>
+          <ul>
+            <li>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain</li>
+            <li>Bitcoin mining is the process of adding</li>
+            <li>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain</li>
+            <li>Bitcoin mining is the process of adding</li>
+            <li>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain</li>
+            <li>Bitcoin mining is the process of adding</li>
+            <li>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain</li>
+            <li>Bitcoin mining is the process of adding</li>
+          </ul>
+        </div>
+      </div>
+      <p>Bitcoin mining is intentionally designed to be resource-intensive and difficult so that the number of blocks found each day by miners remains steady. Individual blocks must contain a proof of work to be considered valid. This proof of work is verified by other Bitcoin nodes each time they receive a block. Bitcoin uses the hashcash proof-of-work function.</p>
+      <p>The primary purpose of mining is to allow Bitcoin nodes to reach a secure, tamper-resistant consensus. Mining is also the mechanism used to introduce Bitcoins into the system: Miners are paid any transaction fees as well as a "subsidy" of newly created coins.</p>
+      <p>This both serves the purpose of disseminating new coins in a decentralized manner as well as motivating people to provide security for the system.</p>
+      <p>Bitcoin mining is so called because it resembles the mining of other commodities: it requires exertion and it slowly makes new currency available at a rate that resembles the rate at which commodities like gold are mined from the ground.</p>
+      <b>What is Proof of Work?</b>
+      <p>A proof of work is a piece of data which was difficult (costly, time-consuming) to produce so as to satisfy certain requirements. It must be trivial to check whether data satisfies said requirements.</p>
+      <p>Producing a proof of work can be a random process with low probability, so that a lot of trial and error is required on average before a valid proof of work is generated. Bitcoin uses the Hashcash proof of work.</p>
+      <b>What is Bitcoin Mining Difficulty?</b>
+      <p>The Computationally-Difficult Problem</p>
+      <p>Bitcoin mining a block is difficult because the SHA-256 hash of a block's header must be lower than or equal to the target in order for the block to be accepted by the network.</p>
+      <p>This problem can be simplified for explanation purposes: The hash of a block must start with a certain number of zeros. The probability of calculating a hash that starts with many zeros is very low, therefore many attempts must be made. In order to generate a new hash each round, a nonce is incremented. See Proof of work for more information.</p>
+      <p>The Bitcoin Network Difficulty Metric</p>
+      <p>The Bitcoin mining network difficulty is the measure of how difficult it is to find a new block compared to the easiest it can ever be. It is recalculated every 2016 blocks to a value such that the previous 2016 blocks would have been generated in exactly two weeks had everyone been mining at this difficulty. This will yield, on average, one block every ten minutes.</p>
+      <p>As more miners join, the rate of block creation will go up. As the rate of block generation goes up, the difficulty rises to compensate which will push the rate of block creation back down. Any blocks released by malicious miners that do not meet the required difficulty target will simply be rejected by everyone on the network and thus will be worthless.</p>
+      <p>The Block Reward</p>
+      <p>When a block is discovered, the discoverer may award themselves a certain number of bitcoins, which is agreed-upon by everyone in the network. Currently this bounty is 25 bitcoins; this value will halve every 210,000 blocks. See Controlled Currency Supply.</p>
+      <p>Additionally, the miner is awarded the fees paid by users sending transactions. The fee is an incentive for the miner to include the transaction in their block. In the future, as the number of new bitcoins miners are allowed to create in each block dwindles, the fees will make up a much more important percentage of mining income.</p>
+    </div>
+  </section>
 </body>
 </html>
