--- a/assets/templates/miner/sass/blocks/cloud.scss
+++ b/assets/templates/miner/sass/blocks/cloud.scss
@@ -4,32 +4,24 @@
   background: url('../img/cloud-bg.png');
 }
 
-.cloud::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 300px;
-  height: 300px;
-  background: url('../img/cloud-human.png');
-}
-
 .cloud__flex {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-around;
   padding-top: 200px;
+  padding-bottom: 100px;
 }
 
 .cloud__left {
-  width: 400px;
-  margin-right: 50px;
+  width: 500px;
+  // margin-right: 50px;
   font-size: 18px;
-  opacity: 0.8;
+  color: rgba(0, 0, 0, 0.8);
 }
 
 .cloud__middle {
-  width: 400px;
+  width: 500px;
   font-size: 18px;
+  color: rgba(0, 0, 0, 0.8);
 }
 
 .cloud__title {
