--- a/assets/templates/miner/sass/blocks/why.scss
+++ b/assets/templates/miner/sass/blocks/why.scss
@@ -30,3 +30,7 @@
   padding-left: 100px;
   background: url('../img/check-red.png') no-repeat left top;
 }
+
+.padding-bottom {
+  padding-bottom: 100px;
+}
