--- a/assets/templates/miner/css/style.css
+++ b/assets/templates/miner/css/style.css
@@ -341,3 +341,6 @@ body {
 .why__right {
   padding-left: 100px;
   background: url("../img/check-red.png") no-repeat left top; }
+
+.padding-bottom {
+  padding-bottom: 100px; }
