--- a/assets/templates/miner/sass/global/base.scss
+++ b/assets/templates/miner/sass/global/base.scss
@@ -8,3 +8,15 @@ body {
   width: 1150px;
   margin: auto;
 }
+
+@media screen and ($tablet-widths) {
+  .container {
+    width: 95%;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .container {
+    width: 98%;
+  }
+}
